[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crane-hire-cpcs-mcp"
readme = "README.md"
version = "1.0.7"
description = "CPCS / CISRS / NPORS card verification, BS 7121 lift plans, mobile crane / tower crane operator certification."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["crane-hire", "cpcs", "cisrs", "npors", "bs-7121", "lift-plan", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/crane-hire-cpcs-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
crane-hire-cpcs-mcp = "server:main"
